first task completed

--- a/src/components/DecreasingSecondCounter/DecreasingSecondCounter.css
+++ b/src/components/DecreasingSecondCounter/DecreasingSecondCounter.css
@@ -3,3 +3,11 @@
  * styl pro základní classname (použité pro light theme) - barva textu je #696969
  * styl pro classname s parametrem dark theme - barva textu je #cacaca
  */
+
+.DecreasingSecondCounter {
+    color: #696969;
+}
+
+.DecreasingSecondCounter--isDarkTheme {
+    color: #cacaca;
+}
